Version 1.1.19 (released ??-???-????)

  * preserve Subversion symlinks in generated tarballs (issue #487)
  * improve root lookup performance (issue #523)
  * new 'max_filesize_kbytes' config option and handling (issue #524)
  * reduce memory usage of tarball generation logic

Version 1.1.18 (released 28-Feb-2013)

  * fix exception raised by BDB-backed SVN repositories (issue #519)
  * hide revision-less files when rcsparse is in use
  * include branchpoints in branch views using rcsparse (issue #347)
  * miscellaneous cvsdb improvements:
    - add --port option to make-database (issue #521)
    - explicitly name columns in queries (issue #522)
    - update MySQL syntax to avoid discontinued "TYPE=" terms

Version 1.1.17 (released 25-Oct-2012)

  * fix exception caused by uninitialized variable usage (issue #516)

Version 1.1.16 (released 24-Oct-2012)

  * security fix: escape "extra" diff info to avoid XSS attack (issue #515)
  * add 'binary_mime_types' configuration option and handling (issue #510)
  * fix 'select for diffs' persistence across log pages (issue #512)
  * remove lock status and filesize check on directories in remote SVN views
  * fix bogus 'Annotation of' page title for non-annotated view (issue #514)

Version 1.1.15 (released 22-Jun-2012)

  * security fix: complete authz support for remote SVN views (issue #353)
  * security fix: log msg leak in SVN revision view with unreadable copy source
  * fix several instances of incorrect information in remote SVN views
  * increase performance of some revision metadata lookups in remote SVN views
  * fix RSS feed regression introduced in 1.1.14

Version 1.1.14 (released 12-Jun-2012)

  * fix annotation of svn files with non-URI-safe paths (issue #504)
  * handle file:/// Subversion rootpaths as local roots (issue #446)
  * fix bug caused by trying to case-normalize anon usernames (issue #505)
  * speed up log handling by reusing tokenization results (issue #506)